Name:               xhtml
Version:            3000.2.1
Copyright:          Bjorn Bringert 2004-2006, Andy Gill and the Oregon
                    Graduate Institute of Science and Technology, 1999-2001
Maintainer:         Chris Dornan <chris@chrisdornan.com>
Author:             Bjorn Bringert
License:            BSD3
License-file:       LICENSE
Synopsis:           An XHTML combinator library
Description:        This package provides combinators for producing
                    XHTML 1.0, including the Strict, Transitional and
                    Frameset variants.
Stability:          Stable
Category:           Web, XML, Pretty Printer
Homepage:           https://github.com/haskell/xhtml
Bug-Reports:        https://github.com/haskell/xhtml/issues
Build-type:         Simple
Cabal-version:      >= 1.10

Source-repository head
    type:           git
    location:       https://github.com/haskell/xhtml

library
    Default-Language: Haskell2010
    Other-Extensions: CPP
    if impl(ghc >= 7.2)
        Default-Extensions: Safe

    Build-depends:  base >= 4 && < 5

    Exposed-modules:
                    Text.XHtml,
                    Text.XHtml.Frameset,
                    Text.XHtml.Strict,
                    Text.XHtml.Transitional,
                    Text.XHtml.Debug,
                    Text.XHtml.Table
    Other-modules:
                    Text.XHtml.Strict.Attributes,
                    Text.XHtml.Strict.Elements,
                    Text.XHtml.Frameset.Attributes,
                    Text.XHtml.Frameset.Elements,
                    Text.XHtml.Transitional.Attributes,
                    Text.XHtml.Transitional.Elements,
                    Text.XHtml.BlockTable,
                    Text.XHtml.Extras,
                    Text.XHtml.Internals

    ghc-options:    -Wall -fwarn-tabs
